cluster/apps/services/jackett/jackett.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett-deployment
  namespace: media
  labels:
    app: jackett
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jackett
  template:
    metadata:
      labels:
        app: jackett
    spec:
      containers:
        - name: jackett
          image: linuxserver/jackett:latest
          ports:
            - name: web
              containerPort: 9117
          volumeMounts:
            - name: jackett-config
              mountPath: /config
            - name: jackett-download
              mountPath: /downloads
          resources:
            limits:
              cpu: 256m
              memory: 512Mi
      volumes:
        - name: jackett-download
          nfs:
            server: 10.2.1.2
            path: "/mnt/pool_01/Downloads"
        - name: jackett-config
          persistentVolumeClaim:
            claimName: jackett-config-claim
---
kind: Service
apiVersion: v1
metadata:
  name: jackett-web-service
  namespace: media
spec:
  externalTrafficPolicy: Local
  selector:
    app: jackett
  ports:
    - protocol: UDP
      port: 80
      targetPort: 9117
      name: jackett-web
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jackett-ingress
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    external-dns/is-public: "false"
    hajimari.io/enable: "true"
    hajimari.io/appName: "jackett"
    hajimari.io/icon: "dns"
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  tls:
    - secretName: jackett-tls
      hosts:
        - "jackett.${SECRET_DOMAIN}"
  rules:
    - host: "jackett.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jackett-web-service
                port:
                  number: 80
